--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "npx nodemon --no-warnings src/index.js "
+    "dev": "npx nodemon --no-warnings src/index.js",
+    "lint": "eslint ./*.js ",
+    "lint:fix": "eslint --fix ./*.js "
   },
   "keywords": [],
   "author": "",
@@ -14,11 +16,16 @@
     "bcrypt": "^5.1.1",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.3"
+    "mongoose": "^8.5.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
     "@rocketseat/eslint-config": "^2.2.2",
     "dotenv": "^16.4.5",
-    "eslint": "^8.57.0"
+    "eslint": "^8.57.0",
+    "globals": "^15.9.0",
+    "swagger-autogen": "^2.23.7"
   }
 }
